--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1679,3 +1679,27 @@ input, select, textarea {
 			max-width: 100%;
 		}
 
+        #main {
+			width: 100vw;
+			max-width: 100vw;
+			box-sizing: border-box;
+		}
+
+        #main article {
+			width: 100%;
+			max-width: 700px;
+			margin: 0 auto;
+			box-siziing: border-box;
+			padding: 2em 1.5em;
+			word-break: break-word;
+			overflow-wrap: break-word;
+		}
+
+        #main article h2,
+        #main article p{
+			word-break: break-word;
+			overflow-wrap: breakword;
+			white-space: normal;
+		}
+
+
