--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1993,6 +1993,12 @@ input, select, textarea {
   color: #ffe3ee;
 }
 
+.panel-main .section-title,
+.panel-light .section-title {
+	color: #fff !important;
+}
+
+
 
 
 
