--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2039,6 +2039,14 @@ input, select, textarea {
     z-index: 1;
 }
 
+#bg:after {
+    background-image: url('../../cosmicbgformywebsite.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    z-index: 1;
+}
+
 
 
 
